tests/baselines/reference/APISample_jsdoc.errors.txt
typescript_standalone.d.ts(21,28): error TS1005: ';' expected.
typescript_standalone.d.ts(21,41): error TS1005: ';' expected.
typescript_standalone.d.ts(8507,28): error TS1005: ';' expected.
typescript_standalone.d.ts(8507,40): error TS1005: ';' expected.
typescript_standalone.d.ts(8963,28): error TS1005: ';' expected.
typescript_standalone.d.ts(8963,42): error TS1005: ';' expected.
typescript_standalone.d.ts(9223,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9223,46): error TS1005: ';' expected.
typescript_standalone.d.ts(9573,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9573,36): error TS1005: ';' expected.
typescript_standalone.d.ts(9597,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9597,36): error TS1005: ';' expected.
typescript_standalone.d.ts(9684,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9684,38): error TS1005: ';' expected.
typescript_standalone.d.ts(10849,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10849,57): error TS1005: ';' expected.
typescript_standalone.d.ts(10860,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10860,41): error TS1005: ';' expected.
typescript_standalone.d.ts(10870,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10870,48): error TS1005: ';' expected.
typescript_standalone.d.ts(10945,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10945,47): error TS1005: ';' expected.
typescript_standalone.d.ts(11002,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11002,47): error TS1005: ';' expected.
typescript_standalone.d.ts(11056,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11056,52): error TS1005: ';' expected.
typescript_standalone.d.ts(11076,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11076,44): error TS1005: ';' expected.
typescript_standalone.d.ts(11086,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11086,35): error TS1005: ';' expected.
typescript_standalone.d.ts(11120,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11120,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11123,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11123,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11127,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11127,45): error TS1005: ';' expected.
typescript_standalone.d.ts(11145,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11145,56): error TS1005: ';' expected.
typescript_standalone.d.ts(11171,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11171,36): error TS1005: ';' expected.
typescript_standalone.d.ts(11174,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11174,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11186,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11186,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11216,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11216,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11250,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11250,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11261,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11261,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11285,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11285,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11293,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11293,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11297,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11297,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11327,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11327,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11370,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11370,41): error TS1005: ';' expected.
typescript_standalone.d.ts(11557,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11557,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11559,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11559,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11563,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11563,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11565,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11565,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11567,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11567,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11569,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11569,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11571,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11571,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11580,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11580,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11582,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11582,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11584,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11584,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11586,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11586,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11588,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11588,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11590,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11590,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11592,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11592,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11594,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11594,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11596,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11596,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11598,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11598,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11600,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11600,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11602,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11602,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11604,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11604,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11606,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11606,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11608,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11608,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11618,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11618,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11620,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11620,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11622,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11622,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11624,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11624,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11626,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11626,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11628,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11628,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11630,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11630,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11632,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11632,72): error TS1005: ';' expected.
typescript_standalone.d.ts(11634,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11634,52): error TS1005: ';' expected.
typescript_standalone.d.ts(11706,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11706,72): error TS1005: ';' expected.
typescript_standalone.d.ts(11708,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11708,38): error TS1005: ';' expected.
typescript_standalone.d.ts(11710,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11710,71): error TS1005: ';' expected.
typescript_standalone.d.ts(11751,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11751,48): error TS1005: ';' expected.


==== tests/cases/compiler/APISample_jsdoc.ts (0 errors) ====
    /*
     * Note: This test is a public API sample. The original sources can be found
     *       at: https://github.com/YousefED/typescript-json-schema
     *           https://github.com/vega/ts-json-schema-generator
     *       Please log a "breaking change" issue for any API breaking change affecting this issue
     */
    
    declare var console: any;
    
    import * as ts from "typescript";
    
    // excerpted from https://github.com/YousefED/typescript-json-schema
    // (converted from a method and modified; for example, `this: any` to compensate, among other changes)
    function parseCommentsIntoDefinition(this: any,
                                         symbol: ts.Symbol,
                                         definition: {description?: string, [s: string]: string | undefined},
                                         otherAnnotations: { [s: string]: true}): void {
        if (!symbol) {
            return;
        }
    
        // the comments for a symbol
        let comments = symbol.getDocumentationComment(undefined);
    
        if (comments.length) {
            definition.description = comments.map(comment => comment.kind === "lineBreak" ? comment.text : comment.text.trim().replace(/\r\n/g, "\n")).join("");
        }
    
        // jsdocs are separate from comments
        const jsdocs = symbol.getJsDocTags();
        jsdocs.forEach(doc => {
            // if we have @TJS-... annotations, we have to parse them
            const { name, text } = doc;
            if (this.userValidationKeywords[name]) {
                definition[name] = this.parseValue(text);
            } else {
                // special annotations
                otherAnnotations[doc.name] = true;
            }
        });
    }
    
    
    // excerpted from https://github.com/vega/ts-json-schema-generator
    export interface Annotations {
        [name: string]: any;
    }
    function getAnnotations(this: any, node: ts.Node): Annotations | undefined {
        const symbol: ts.Symbol = (node as any).symbol;
        if (!symbol) {
            return undefined;
        }
    
        const jsDocTags: ts.JSDocTagInfo[] = symbol.getJsDocTags();
        if (!jsDocTags || !jsDocTags.length) {
            return undefined;
        }
    
        const annotations: Annotations = jsDocTags.reduce((result: Annotations, jsDocTag: ts.JSDocTagInfo) => {
            const value = this.parseJsDocTag(jsDocTag);
            if (value !== undefined) {
                result[jsDocTag.name] = value;
            }
    
            return result;
        }, {});
        return Object.keys(annotations).length ? annotations : undefined;
    }
    
    // these examples are artificial and mostly nonsensical
    function parseSpecificTags(node: ts.Node) {
        if (node.kind === ts.SyntaxKind.Parameter) {
            return ts.getJSDocParameterTags(node as ts.ParameterDeclaration);
        }
        if (node.kind === ts.SyntaxKind.FunctionDeclaration) {
            const func = node as ts.FunctionDeclaration;
            if (ts.hasJSDocParameterTags(func)) {
                const flat: ts.JSDocTag[] = [];
                for (const tags of func.parameters.map(ts.getJSDocParameterTags)) {
                    if (tags) flat.push(...tags);
                }
                return flat;
            }
        }
    }
    
    function getReturnTypeFromJSDoc(node: ts.Node) {
        if (node.kind === ts.SyntaxKind.FunctionDeclaration) {
            return ts.getJSDocReturnType(node);
        }
        let type = ts.getJSDocType(node);
        if (type && type.kind === ts.SyntaxKind.FunctionType) {
            return (type as ts.FunctionTypeNode).type;
        }
    }
    
    function getAllTags(node: ts.Node) {
        ts.getJSDocTags(node);
    }
    
    function getSomeOtherTags(node: ts.Node) {
        const tags: (ts.JSDocTag | undefined)[] = [];
        tags.push(ts.getJSDocAugmentsTag(node));
        tags.push(ts.getJSDocClassTag(node));
        tags.push(ts.getJSDocReturnTag(node));
        const type = ts.getJSDocTypeTag(node);
        if (type) {
            tags.push(type);
        }
        tags.push(ts.getJSDocTemplateTag(node));
        return tags;
    }
    